<resources>

    <!-- CUSTOMIZE THESE FOR YOUR APP -->
    <string name="facebook_app_id">1776753292575530</string>
    <string name="google_cloud_messaging_package">parkassist.cloud.com.parkassist</string>

    <!-- REQUIRED FOR GENERAL APP FUNCTIONALITY - YOU MAY WANT TO KEEP THESE -->

    <string name="main_nav_menu_item_home">Home</string>
    <string name="title_activity_item_detail">Item Detail</string>
    <string name="title_activity_item_list">Item List</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="title_activity_sign_in">Sign-in</string>
    <string name="button_text_sign_in">SIGN IN</string>
    <string name="button_text_sign_out">SIGN OUT</string>
    <string name="sign_in_email">Email</string>
    <string name="sign_in_username">Username/Phone Number (+15551234567)</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_new_account">Create New Account</string>
    <string name="sign_in_forgot_password">Forgot Your Password?</string>
    <string name="sign_in_or">or sign in with</string>
    <string name="main_nav_menu_default_user_text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_mfa">MFA Code</string>
    <string name="title_activity_sign_up_confirm">Confirm Account</string>
    <string name="forgot_password_header">Forgot your password?</string>
    <string name="forgot_password_body">Set your new password with the verification code that was sent to you.</string>
    <string name="forgot_password_input_code_hint">Verification code</string>
    <string name="forgot_password_button_hint">Set password</string>
    <string name="mfa_header">MFA verification is required to authenticate.</string>
    <string name="mfa_code_sent_message">Code sent.</string>
    <string name="verify_button_text">Verify</string>
    <string name="username_text">Username</string>
    <string name="given_name_text">Given name</string>
    <string name="email_address_text">Email address</string>
    <string name="phone_number_text">Phone number (+15551234567)</string>
    <string name="sign_up_header">Enter the following information to sign up.</string>
    <string name="sign_up_confirm_code">Confirmation code</string>
    <string name="sign_up_confirm_text">Confirm</string>
    <string name="sign_up_confirm_code_sent">A confirmation code was sent.</string>
    <string name="sign_up_confirm_enter_code">Please enter the code below to confirm your account.</string>
    <string name="sign_up_confirm_title">Confirm your account</string>
    <string name="password_change_success">Password change succeeded.</string>
    <string name="password_change_failed">Password change failed.</string>
    <string name="sign_up_success">Sign up succeeded.</string>
    <string name="sign_up_failed">Sign up failed.</string>
    <string name="login_success">Login succeeded.</string>
    <string name="login_failed">Login failed.</string>
    <string name="sign_up_confirm_success">Sign up confirmation succeeded.</string>
    <string name="sign_up_confirm_failed">Sign up confirmation failed.</string>

    <string name="app_name">ParkAssist</string>
    <string name="SplashAppTitle">Park Assist</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
</resources>
