<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2016 Amazon.com, Inc. or its affiliates (Amazon). All Rights Reserved.

 Code generated by AWS Mobile Hub. Amazon gives unlimited permission to
 copy, distribute and modify it.

 Source code generated from template: aws-my-sample-app-android v0.13
--> 

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"

    tools:context="parkassist.cloud.com.parkassist.demo.userpools.SignUpActivity"
    android:background="@color/cast_intro_overlay_background_color">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/app_logo"
        app:srcCompat="@drawable/app_logo"
        android:id="@+id/imageView4"
        android:layout_centerHorizontal="true"
        android:contentDescription="ParkAssist Logo" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="0.5"
        android:id="@+id/layout_SignUp"
        android:layout_margin="15dp"
        android:background="@drawable/round_layout"
        android:padding="5dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/imageView4">

        <TextView
            android:id="@+id/signup_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/sign_up_header"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginTop="5dp" />

        <Space
            android:id="@+id/signup_space1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_intra_group_separation"
            android:layout_below="@id/signup_message"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/signup_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_text_height"
            android:layout_below="@id/signup_space1"
            android:layout_centerHorizontal="true"
            android:hint="@string/username_text"
            android:inputType="textPersonName" />

        <Space
            android:id="@+id/signup_space2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_intra_group_separation"
            android:layout_below="@id/signup_username" />

        <EditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_text_height"
            android:layout_below="@id/signup_space2"
            android:layout_centerHorizontal="true"
            android:hint="@string/sign_in_password"
            android:inputType="textPassword"/>

        <Space
            android:id="@+id/signup_space3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_intra_group_separation"
            android:layout_below="@id/signup_password" />

        <EditText
            android:id="@+id/signup_given_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_text_height"
            android:layout_below="@id/signup_space3"
            android:layout_centerHorizontal="true"
            android:hint="@string/given_name_text"
            android:inputType="textPersonName" />

        <Space
            android:id="@+id/signup_space4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_intra_group_separation"
            android:layout_below="@id/signup_given_name" />

        <EditText
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_text_height"
            android:layout_below="@id/signup_space4"
            android:layout_centerHorizontal="true"
            android:hint="@string/email_address_text"
            android:inputType="textEmailAddress" />

        <Space
            android:id="@+id/signup_space5"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_intra_group_separation"
            android:layout_below="@id/signup_email" />

        <EditText
            android:id="@+id/signup_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_text_height"
            android:layout_below="@id/signup_space5"
            android:layout_centerHorizontal="true"
            android:hint="@string/phone_number_text"
            android:inputType="phone"/>

        <Space
            android:id="@+id/signup_space6"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_intra_group_separation"
            android:layout_below="@id/signup_phone" />
    </LinearLayout>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_button_height"
        android:onClick="signUp"
        android:text="@string/title_activity_sign_up"
        android:textAllCaps="false"
        android:textSize="@dimen/activity_button_text_size"
        android:layout_below="@+id/layout_SignUp"
        android:layout_centerHorizontal="true"
        android:background="@color/splash_text"
        android:textColor="@color/cardview_light_background"
        android:layout_margin="5dp"
        android:layout_alignParentEnd="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false" />


</RelativeLayout>
